fixed demo gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,12 @@ body {
 
 .row {
     display: flex;
-    gap: 30px;
+    flex-wrap: wrap;
+    margin: 0 -1rem;
 }
 
-.d_flex {
-    display: flex;
+[class^="col_"]{
+    padding: 0 1rem;
 }
 
 .col_1 {
@@ -142,12 +143,7 @@ section {
 }
 
 #app_title {
-    margin-left: -45px;
-}
-
-#app_text {
     text-align: left;
-    margin-left: 25px;
 }
 
 .demo_logos {
@@ -173,7 +169,7 @@ section {
 
 .demo_text {
     text-align: center;
-    margin-bottom: 30px;
+    margin: 10px;
     background-color: var(--secondarylight);
     border-radius: 1rem;
 }
@@ -424,9 +420,9 @@ footer a {
 /* #endregion main */
 
 /* #region responsive */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 481px) {
     .container {
-        max-width: 720px;
+        width: 100%;
     }
 
     .menu_right {
@@ -437,6 +433,38 @@ footer a {
         display: block;
         font-size: 20px;
         color: white;
+    }
+}
+
+@media screen and (min-width: 769px) {
+    .container {
+        max-width: 720px;
+    }
+
+    .col_sm_4 {
+        width: calc(100% / 12 * 4 - 20px);
+    }
+
+    .col_sm_6 {
+        width: calc(100% / 12 * 6);
+    }
+
+    .col_sm_8 {
+        width: calc(100% / 12 * 8 - 20px);
+    }
+
+    .menu_right {
+        display: none;
+    }
+
+    .burger_menu {
+        display: block;
+        font-size: 20px;
+        color: white;
+    }
+
+    .demo img {
+
     }
 }
 @media screen and (min-width: 1200px) {
@@ -458,8 +486,8 @@ footer a {
     }
 
     .quote_about {
-        left: 140px;
-        bottom: 230px;
+        left: 190px;
+        bottom: 280px;
     }
 
     .container_sm {
